# src/generated/routes.ts
@@ -5,6 +5,8 @@ import type { TsoaRoute } from '@tsoa/runtime';
 import {  fetchMiddlewares, ExpressTemplateService } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { KnightController } from './../controllers/knightController';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { HxHCharacterController } from './../controllers/HxHCharacterController';
 import type { Request as ExRequest, Response as ExResponse, RequestHandler, Router } from 'express';
 
 
@@ -20,6 +22,43 @@ const models: TsoaRoute.Models = {
             "rank": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["Bronze"]},{"dataType":"enum","enums":["Silver"]},{"dataType":"enum","enums":["Gold"]}],"required":true},
             "power": {"dataType":"double","required":true},
             "img": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}]},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "HxHCharacterResponse": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"string","required":true},
+            "name": {"dataType":"string","required":true},
+            "age": {"dataType":"double","required":true},
+            "height": {"dataType":"double","required":true},
+            "weight": {"dataType":"double","required":true},
+            "img": {"dataType":"string","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "CreateHxHCharacterDTO": {
+        "dataType": "refObject",
+        "properties": {
+            "name": {"dataType":"string","required":true},
+            "age": {"dataType":"double","required":true},
+            "height": {"dataType":"double","required":true},
+            "weight": {"dataType":"double","required":true},
+            "img": {"dataType":"string","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "UpdateHxHCharacterDTO": {
+        "dataType": "refObject",
+        "properties": {
+            "name": {"dataType":"string"},
+            "age": {"dataType":"double"},
+            "height": {"dataType":"double"},
+            "weight": {"dataType":"double"},
+            "img": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
@@ -121,6 +160,191 @@ export function RegisterRoutes(app: Router) {
 
               await templateService.apiHandler({
                 methodName: 'search',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHxHCharacterController_searchCharacters: Record<string, TsoaRoute.ParameterSchema> = {
+                name: {"in":"query","name":"name","dataType":"string"},
+                age: {"in":"query","name":"age","dataType":"double"},
+                minHeight: {"in":"query","name":"minHeight","dataType":"double"},
+                maxHeight: {"in":"query","name":"maxHeight","dataType":"double"},
+                minWeight: {"in":"query","name":"minWeight","dataType":"double"},
+                maxWeight: {"in":"query","name":"maxWeight","dataType":"double"},
+        };
+        app.get('/api/hxh-characters',
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController)),
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController.prototype.searchCharacters)),
+
+            async function HxHCharacterController_searchCharacters(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHxHCharacterController_searchCharacters, request, response });
+
+                const controller = new HxHCharacterController();
+
+              await templateService.apiHandler({
+                methodName: 'searchCharacters',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHxHCharacterController_getCharacterById: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"string"},
+        };
+        app.get('/api/hxh-characters/:id',
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController)),
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController.prototype.getCharacterById)),
+
+            async function HxHCharacterController_getCharacterById(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHxHCharacterController_getCharacterById, request, response });
+
+                const controller = new HxHCharacterController();
+
+              await templateService.apiHandler({
+                methodName: 'getCharacterById',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHxHCharacterController_createCharacter: Record<string, TsoaRoute.ParameterSchema> = {
+                characterData: {"in":"body","name":"characterData","required":true,"ref":"CreateHxHCharacterDTO"},
+        };
+        app.post('/api/hxh-characters',
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController)),
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController.prototype.createCharacter)),
+
+            async function HxHCharacterController_createCharacter(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHxHCharacterController_createCharacter, request, response });
+
+                const controller = new HxHCharacterController();
+
+              await templateService.apiHandler({
+                methodName: 'createCharacter',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHxHCharacterController_updateCharacter: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"string"},
+                characterData: {"in":"body","name":"characterData","required":true,"ref":"UpdateHxHCharacterDTO"},
+        };
+        app.put('/api/hxh-characters/:id',
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController)),
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController.prototype.updateCharacter)),
+
+            async function HxHCharacterController_updateCharacter(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHxHCharacterController_updateCharacter, request, response });
+
+                const controller = new HxHCharacterController();
+
+              await templateService.apiHandler({
+                methodName: 'updateCharacter',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHxHCharacterController_deleteCharacter: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"string"},
+        };
+        app.delete('/api/hxh-characters/:id',
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController)),
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController.prototype.deleteCharacter)),
+
+            async function HxHCharacterController_deleteCharacter(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHxHCharacterController_deleteCharacter, request, response });
+
+                const controller = new HxHCharacterController();
+
+              await templateService.apiHandler({
+                methodName: 'deleteCharacter',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHxHCharacterController_getCharactersStats: Record<string, TsoaRoute.ParameterSchema> = {
+        };
+        app.get('/api/hxh-characters/stats/summary',
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController)),
+            ...(fetchMiddlewares<RequestHandler>(HxHCharacterController.prototype.getCharactersStats)),
+
+            async function HxHCharacterController_getCharactersStats(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHxHCharacterController_getCharactersStats, request, response });
+
+                const controller = new HxHCharacterController();
+
+              await templateService.apiHandler({
+                methodName: 'getCharactersStats',
                 controller,
                 response,
                 next,
